assets/css/main.css
/* ... */
		#banner input[type="submit"],
		#banner input[type="reset"],
		#banner input[type="button"],
		#banner button,
		#banner .button {
			background-color: #fff;
			box-shadow: none;
			color: #1E2832 !important;
		}

			#banner input[type="submit"].icon:before,
			#banner input[type="reset"].icon:before,
			#banner input[type="button"].icon:before,
			#banner button.icon:before,
			#banner .button.icon:before {
				color: #a5a9ad;
			}

			#banner input[type="submit"]:hover,
			#banner input[type="reset"]:hover,
			#banner input[type="button"]:hover,
			#banner button:hover,
			#banner .button:hover {
				background-color: white;
			}

			#banner input[type="submit"]:active,
			#banner input[type="reset"]:active,
			#banner input[type="button"]:active,
			#banner button:active,
			#banner .button:active {
				background-color: #f2f2f2;
			}

			#banner input[type="submit"].special,
			#banner input[type="reset"].special,
			#banner input[type="button"].special,
			#banner button.special,
			#banner .button.special {
				background-color: #E0BCE7;
				box-shadow: none;
				color: #fff !important;
			}

				#banner input[type="submit"].special:hover,
				#banner input[type="reset"].special:hover,
				#banner input[type="button"].special:hover,
				#banner button.special:hover,
				#banner .button.special:hover {
					background-color: #fff;
					color: #E0BCE7 !important;
				}

				#banner input[type="submit"].special:active,
				#banner input[type="reset"].special:active,
				#banner input[type="button"].special:active,
				#banner button.special:active,
				#banner .button.special:active {
					background-color: #fff;
					color: #E0BCE7 !important;
				}

			#banner input[type="submit"].alt,
			#banner input[type="reset"].alt,
			#banner input[type="button"].alt,
			#banner button.alt,
			#banner .button.alt {
				background-color: transparent;
				box-shadow: inset 0 0 0 2px #fff;
				color: #fff !important;
			}

				#banner input[type="submit"].alt:hover,
				#banner input[type="reset"].alt:hover,
				#banner input[type="button"].alt:hover,
				#banner button.alt:hover,
				#banner .button.alt:hover {
					background-color: rgba(255, 255, 255, 0.05);
				}

				#banner input[type="submit"].alt:active,
				#banner input[type="reset"].alt:active,
				#banner input[type="button"].alt:active,
				#banner button.alt:active,
				#banner .button.alt:active {
					background-color: rgba(255, 255, 255, 0.1);
				}

		#banner h2 {
			font-size: 2.5em;
			margin: 0 0 0.5em 0;
			padding: 0;
		}

		#banner p {
			color: #fff;
			font-size: 1.5em;
			margin-bottom: 1.75em;
			text-transform: uppercase;
		}

		#banner .icon {
			border-radius: 100%;
			border: solid 2px #fff;
			color: #fff;
			display: inline-block;
			font-size: 3em;
			height: 2.25em;
			line-height: 1.25em;
			margin-bottom: 0.5em;
			padding: 0.5em;
			width: 2.25em;
		}

		@media screen and (max-width: 1680px) {

			#banner {
				padding: 11em 0 9em 0;
			}

		}

		@media screen and (max-width: 1280px) {

			#banner {
				padding: 9em 0 7em 0;
			}

				#banner h2 {
					font-size: 2em;
				}

		}

		@media screen and (max-width: 980px) {

			#banner {
				padding: 8em 2em 6em 2em;
			}

		}

		@media screen and (max-width: 736px) {

			#banner {
				padding: 5em 2em 3em 2em;
			}

				#banner h2 {
					font-size: 1.5em;
				}

				#banner p {
					font-size: 1em;
				}

				#banner .icon {
					font-size: 2em;
				}

		}

		@media screen and (max-width: 480px) {

			#banner {
				padding: 5em 2em 3em 2em;
			}

				#banner .icon {
					font-size: 1.5em;
				}

		}

/* Main */

	#main {
		padding: 5em 0 3em 0;
	}

		@media screen and (max-width: 1280px) {

			#main {
				padding: 4em 0 2em 0;
			}

		}

		@media screen and (max-width: 980px) {

			#main {
				padding: 3em 0 1em 0;
			}

		}

		@media screen and (max-width: 736px) {

			#main {
				padding: 2em 0 0.1em 0;
			}

		}

/* Footer */

	#footer {
		background-color: #1E2832;
		color: rgba(255, 255, 255, 0.75);
		text-align: center;
	}

		#footer input, #footer select, #footer textarea {
			color: #fff;
		}

		#footer a {
			color: #51BAA4;
		}

		#footer strong, #footer b {
			color: #fff;
		}

		#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
			color: #fff;
		}

		#footer blockquote {
			border-left-color: transparent;
		}

		#footer code {
			background: rgba(255, 255, 255, 0.05);
			border-color: transparent;
		}

		#footer hr {
			border-bottom-color: transparent;
		}

		#footer a {
			-moz-transition: color 0.2s ease-in-out;
			-webkit-transition: color 0.2s ease-in-out;
			-ms-transition: color 0.2s ease-in-out;
			transition: color 0.2s ease-in-out;
			color: #a5a9ad;
		}

			#footer a:active, #footer a:focus, #footer a:hover {
				color: #fff;
			}

		#footer .inner {
			padding: 6em 0 4em 0;
			border-top: solid 1px rgba(255, 255, 255, 0.1);
			margin: 0 auto;
			width: 75%;
		}

		#footer ul.icons li {
			padding-right: 2.5em;
		}

			#footer ul.icons li:last-child {
				padding-right: 0;
			}

		#footer .copyright {
			color: #a5a9ad;
			font-size: 0.9em;
			margin: 0 0 2em 0;
			padding: 0;
			text-transform: uppercase;
		}

			#footer .copyright li {
				display: inline-block;
				list-style: none;
				margin: 0 0.1em;
			}

		@media screen and (max-width: 980px) {

			#footer .inner {
				padding: 5em 0 3em 0;
				width: 100%;
			}

		}

		@media screen and (max-width: 736px) {

			#footer .inner {
				padding: 3em 0 1em 0;
			}

			#footer .copyright li {
				display: block;
				margin: 0;
			}

			#footer ul.icons li {
				font-size: 0.9em;
			}

		}

		@media screen and (max-width: 480px) {

			#footer .inner {
				padding: 2em 0 0.1em 0;
			}

		}

		.active {
			background-color: #E0BCE7 !important;
			height: inherit !important;
		}

		.two-column {
			content: "";
			display: table;
			clear: both;
			width: 70%;
			margin: auto;
		}

		.column {
			float: left;
			width: 50%;
		}
/* ... */

